--- a/TODO
+++ b/TODO
@@ -3,12 +3,10 @@ FIXMES:	(release-critical)
 - don't record samples to WAV file before *any* song is processed by sequencer
 - midireceiver: vswitch with note-off + disconnected (due to mixer) should become idle
 - midireceiver: revisit sched_tag as condition, it's probably too weak due to temporary enginescheduler resets
-- auto-add orphan tracks to master when loading
-- auto-add orphan parts to a new track when loading
+- auto-add orphan tracks to master when loading for <=0.6.2
 - move and add compat for Dav::*Name -> Bse::Dav::*Name
 - queue discard on active module and dismiss transaction. will the module be freed (although the job was not processed)?
 - deleteing last track + undo doesn't redraw trackroll
-- add compat code to auto-connect tracks for songs<=0.6.2
 - adjust engine block size (Subject: blocksize vs. cpu)
 - save mixer bus volumes
 TODO:
