--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-20  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Tino Meinen.
+
 2004-10-18  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
