--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,22 @@
+Fri Nov  5 02:32:57 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/gxk/gxkparam.[hc]: added gxk_param_add_grab_widget() for
+	which pointer grabs cause undo grouping. implemented grouping hooks
+	for parameter bindings. limited size-groups to 256.
+
+	* beast-gtk/gxk/gxkparam-scale.c:
+	* beast-gtk/gxk/gxkparam-spinner.c:
+	* beast-gtk/bstparam-scale.c:
+	* beast-gtk/bstparam-note-spinner.c: undo-group parameter changes
+	across pointer grabs.
+
+	* beast-gtk/bstparam.c: implemented undo grouping for proxy
+	parameter bindings.
+
+	* beast-gtk/bstcanvassource.c: undo-group source movement.
+
+	* beast-gtk/bstcanvaslink.c: cleanups.
+
 Thu Nov  4 16:23:51 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bsttrackroll.c (track_roll_idle_update_scopes): redraw the
