--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Sat Nov 13 20:12:23 2004  Tim Janik  <timj@gtk.org>
+
+	* bsecompat.c: added compat for DavChorus and DavBassFilter.
+
 Sat Oct 30 13:40:13 2004  Tim Janik  <timj@gtk.org>
 
 	* bsebusmodule.idl:
