--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Wed Nov 17 01:20:56 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstbuseditor.c:
+	* beast-gtk/bstsnifferscope.c:
+	* beast-gtk/bstrecords.idl: added config options to turn off scopes and
+	meters.
+
 Tue Nov 16 14:59:40 2004  Tim Janik  <timj@gtk.org>
 
 	* library/demo/partymonster.bse: added busses to properly mix up the
