--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,7 @@
+Thu Nov 18 13:34:56 2004  Tim Janik  <timj@gtk.org>
+
+	* davbassfilter.cc: fixed inverted trigger condition.
+
 Sat Nov 13 20:13:03 2004  Tim Janik  <timj@gtk.org>
 
 	* davbassfilter.*:
