--- a/po/es.po
+++ b/po/es.po
@@ -1,3 +1,4 @@
+# translation of es.po to 
 # Spanish translation of beast
 # This file is distributed under the same license as the BEAST package.
 # Copyright (C) 2004 Free Software Foundation.
@@ -5,19 +6,21 @@
 # Francisco Javier F. Serrador <serrador@cvs.gnome.org>, 2003, 2004.
 # Yelitza Louze <ylouze@redhat.com>, 2003.
 # Jorge González González <jorge.gonzalez.gonzalez@hispalinux.es>, 2004.
+# Jorge Gonzalez Gonzalez <jorge.gonzalez.gonzalez@hispalinux.es>, 2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-10-17 14:39-0400\n"
-"PO-Revision-Date: 2004-11-03 18:32+0100\n"
-"Last-Translator: Jorge González González <jorge.gonzalez.gonzalez@hispalinux.es>\n"
-"Language-Team:  <traductores@es.gnome.org>\n"
+"PO-Revision-Date: 2004-11-18 13:58+0100\n"
+"Last-Translator: \n"
+"Language-Team:  <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.9.1\n"
+"X-Generator: KBabel 1.3.1\n"
+"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #: beast-gtk/bstapp.c:74
 msgid "_New"
@@ -264,7 +267,7 @@ msgstr "Preguntas más frecuentes"
 
 #: beast-gtk/bstapp.c:159
 msgid "Online _Help Desk..."
-msgstr "Informaciones en lí­nea..."
+msgstr "Ayuda en lí­nea..."
 
 #: beast-gtk/bstapp.c:159
 msgid "Start a web browser pointing to the online help desk at the BEAST website"
@@ -1336,7 +1339,7 @@ msgstr "1\\/1"
 
 #: beast-gtk/bstpianorollctrl.c:67
 msgid "Insert whole notes"
-msgstr "Insertar notas completas"
+msgstr "Insertar redonda"
 
 #: beast-gtk/bstpianorollctrl.c:69
 msgid "1\\/2"
@@ -1344,7 +1347,7 @@ msgstr "1\\/2"
 
 #: beast-gtk/bstpianorollctrl.c:69
 msgid "Insert half notes"
-msgstr "Insertar medias notas"
+msgstr "Insertar blanca"
 
 #: beast-gtk/bstpianorollctrl.c:71
 msgid "1\\/4"
@@ -1352,7 +1355,7 @@ msgstr "1\\/4"
 
 #: beast-gtk/bstpianorollctrl.c:71
 msgid "Insert quarter notes"
-msgstr "Insertar cuartas notas"
+msgstr "Insertar negra"
 
 #: beast-gtk/bstpianorollctrl.c:73
 msgid "1\\/8"
@@ -1360,7 +1363,7 @@ msgstr "1\\/8"
 
 #: beast-gtk/bstpianorollctrl.c:73
 msgid "Insert eighths note"
-msgstr "Insertar octavas notas"
+msgstr "Insertar corchea"
 
 #: beast-gtk/bstpianorollctrl.c:75
 msgid "1\\/16"
@@ -1368,7 +1371,7 @@ msgstr "1\\/16"
 
 #: beast-gtk/bstpianorollctrl.c:75
 msgid "Insert sixteenth note"
-msgstr "Insertar dieciseisavas notas"
+msgstr "Insertar semicorchea"
 
 #: beast-gtk/bstpianorollctrl.c:77
 msgid "1\\/32"
@@ -1376,7 +1379,7 @@ msgstr "1\\/32"
 
 #: beast-gtk/bstpianorollctrl.c:77
 msgid "Insert thirty-second note"
-msgstr "Insertar treinta y dosavas notas"
+msgstr "Insertarfusa"
 
 #: beast-gtk/bstpianorollctrl.c:79
 msgid "1\\/64"
@@ -1384,7 +1387,7 @@ msgstr "1\\/64"
 
 #: beast-gtk/bstpianorollctrl.c:79
 msgid "Insert sixty-fourth note"
-msgstr "Insertar sesenta y cuatroavas notas"
+msgstr "Insertar semifusa"
 
 #: beast-gtk/bstpianorollctrl.c:81
 msgid "1\\/128"
@@ -1392,7 +1395,7 @@ msgstr "1\\/128"
 
 #: beast-gtk/bstpianorollctrl.c:81
 msgid "Insert hundred twenty-eighth note"
-msgstr "Insertar ciento veintiochoavas notas"
+msgstr "Insertar garrapatea"
 
 #: beast-gtk/bstpianorollctrl.c:94 beast-gtk/bsttrackrollctrl.c:81
 msgid "Q: Tact"
@@ -1416,7 +1419,7 @@ msgstr "C: 1\\/1"
 
 #: beast-gtk/bstpianorollctrl.c:98 beast-gtk/bsttrackrollctrl.c:85
 msgid "Quantize to whole note boundaries"
-msgstr "Cuantizar a la nota completa del lí­mite de notas"
+msgstr "Cuantizar a los límites de la redonda"
 
 #: beast-gtk/bstpianorollctrl.c:100 beast-gtk/bsttrackrollctrl.c:87
 msgid "Q: 1\\/2"
@@ -1424,7 +1427,7 @@ msgstr "C: 1\\/2"
 
 #: beast-gtk/bstpianorollctrl.c:100 beast-gtk/bsttrackrollctrl.c:87
 msgid "Quantize to half note boundaries"
-msgstr "Cuantizar a la mitad del lí­mite de notas"
+msgstr "Cuantizar a los límites de la blanca"
 
 #: beast-gtk/bstpianorollctrl.c:102 beast-gtk/bsttrackrollctrl.c:89
 msgid "Q: 1\\/4"
@@ -1432,7 +1435,7 @@ msgstr "C: 1\\/4"
 
 #: beast-gtk/bstpianorollctrl.c:102 beast-gtk/bsttrackrollctrl.c:89
 msgid "Quantize to quarter note boundaries"
-msgstr "Cuantizar al cuarto del lí­mite de nota"
+msgstr "Cuantizar a los límites de la negra"
 
 #: beast-gtk/bstpianorollctrl.c:104 beast-gtk/bsttrackrollctrl.c:91
 msgid "Q: 1\\/8"
@@ -1440,7 +1443,7 @@ msgstr "C: 1\\/8"
 
 #: beast-gtk/bstpianorollctrl.c:104 beast-gtk/bsttrackrollctrl.c:91
 msgid "Quantize to eighths note boundaries"
-msgstr "Cuantizar al octavo del lí­mite de nota"
+msgstr "Cuantizar a los límites de la corchea"
 
 #: beast-gtk/bstpianorollctrl.c:106 beast-gtk/bsttrackrollctrl.c:93
 msgid "Q: 1\\/16"
@@ -1448,7 +1451,7 @@ msgstr "C: 1\\/16"
 
 #: beast-gtk/bstpianorollctrl.c:106 beast-gtk/bsttrackrollctrl.c:93
 msgid "Quantize to sixteenth note boundaries"
-msgstr "Cuantizar al dieciseisavos del lí­mite de nota"
+msgstr "Cuantizar a los límites de la semicorchea"
 
 #: beast-gtk/bstpianorollctrl.c:108 beast-gtk/bsttrackrollctrl.c:95
 msgid "Q: 1\\/32"
@@ -1456,7 +1459,7 @@ msgstr "C: 1\\/32"
 
 #: beast-gtk/bstpianorollctrl.c:108 beast-gtk/bsttrackrollctrl.c:95
 msgid "Quantize to thirty-second note boundaries"
-msgstr "Cuantizar al treinta y dosavos del lí­mite de nota"
+msgstr "Cuantizar a los límites de la fusa"
 
 #: beast-gtk/bstpianorollctrl.c:110 beast-gtk/bsttrackrollctrl.c:97
 msgid "Q: 1\\/64"
@@ -1464,7 +1467,7 @@ msgstr "C: 1\\/64"
 
 #: beast-gtk/bstpianorollctrl.c:110 beast-gtk/bsttrackrollctrl.c:97
 msgid "Quantize to sixty-fourth note boundaries"
-msgstr "Cuantizar al sesenta y cuatroavos del lí­mite de nota"
+msgstr "Cuantizar a los límites de la semifusa"
 
 #: beast-gtk/bstpianorollctrl.c:112 beast-gtk/bsttrackrollctrl.c:99
 msgid "Q: 1\\/128"
@@ -1472,7 +1475,7 @@ msgstr "C: 1\\/128"
 
 #: beast-gtk/bstpianorollctrl.c:112 beast-gtk/bsttrackrollctrl.c:99
 msgid "Quantize to hundred twenty-eighth note boundaries"
-msgstr "Cuantizar al ciento veintiochoavos del lí­mite de nota"
+msgstr "Cuantizar a los límites de la garrapatea"
 
 #: beast-gtk/bstpianorollctrl.c:478 beast-gtk/bstpianorollctrl.c:485
 #: beast-gtk/bstpianorollctrl.c:573
@@ -4459,13 +4462,12 @@ msgid "MIDI"
 msgstr "MIDI"
 
 #: bse/bsecore.idl:666
-#, fuzzy
 msgid "Invert Sustain Pedal"
-msgstr "Invertir el pedal sostenido"
+msgstr "Invertir el pedal fuerte"
 
 #: bse/bsecore.idl:667
 msgid "Invert the state of sustain (damper) pedal so on/off meanings are reversed"
-msgstr ""
+msgstr "Invertir el estado del pedal fuerte (apagador) de manera que el significado de encendido/apagado se invierte."
 
 #: bse/bsecore.idl:670
 #, fuzzy
@@ -4673,7 +4675,7 @@ msgstr "Velocidad de pulsación de tecla"
 
 #: bse/bseinstrumentinput.c:126 bse/bsemidiinput.c:115
 msgid "Aftertouch"
-msgstr ""
+msgstr "Martillo balanceado (aftertouch)"
 
 #: bse/bseinstrumentinput.c:126 bse/bsemidiinput.c:115
 msgid "Velocity while the note is pressed"
@@ -4864,7 +4866,7 @@ msgstr "Velocidad de salida"
 
 #: bse/bsemidivoice.c:115
 msgid "Aftertouch Out"
-msgstr ""
+msgstr "Aftertouch"
 
 #: bse/bsemidivoice.c:133 plugins/davcanyondelay.c:116
 msgid "Left In"
@@ -5052,7 +5054,6 @@ msgstr "Compases por minuto"
 #. change default
 #. override parent property
 #: bse/bsesong.c:810 bse/bsesong.c:814 bse/bsesong.c:819 bse/bsesong.c:824
-#, fuzzy
 msgid "Looping"
 msgstr "Realimentación"
 
@@ -5104,7 +5105,6 @@ msgid "Find a track suitable for playing notes of a given part."
 msgstr "Encontrar una pista conveniente para reproducir notas de una pieza dada."
 
 #: bse/bsesong.proc:431
-#, fuzzy
 msgid "Find the first track that contains part, suitable to check for orphan parts."
 msgstr "Encontrar la primera pista que contenga una pieza, conveniente para comprobar con las piezas huérfanas."
 
@@ -5404,7 +5404,6 @@ msgid "Music Composer"
 msgstr "Compositor de música"
 
 #: data/beast.xml.in.h:1 data/bse.keys.in.h:2
-#, fuzzy
 msgid "BSE Multi-Part Wave File"
 msgstr "Archivo de ondas BSE multi-parte"
 
@@ -5437,6 +5436,19 @@ msgid ""
 "  DEV    - the device number for plugins like 'hw'\n"
 "  SUBDEV - the subdevice number for plugins like 'hw'\n"
 msgstr ""
+"Controlador MIDI de Arquitectura de Sonido Linux Avanzada (ALSA)\n"
+"usando ALSA %s.\n"
+"La especificación del dispositivo sigue las convenciones de nombres\n"
+"de ALSA como se detalla en la descripción que está disponible en la\n"
+"página web del proyecto:\n"
+"    http://alsa-project.org/alsa-doc/alsa-lib/midi.html\n"
+"Varios complementos para ALSA pueden ser usados, 'hw' permite\n"
+"direccionamiento directo de los canales hardware por tarjeta, dispositivo\n"
+"y subdispositivo.\n"
+"  COMPLEMENTO - el complemento ALSA por defecto es generalmente bueno\n"
+"  TARJETA - el número de tarjeta para los complementos como 'hw'\n"
+"  DISPOSITIVO - el número de dispositivo para los complementos como 'hw'\n"
+"  SUBDISPOSITIVO - el número de subdispositivo para los complementos como 'hw'\n"
 
 #: drivers/bse-alsa/bsepcmdevice-alsa.c:556
 #, c-format
@@ -5454,6 +5466,19 @@ msgid ""
 "  DEV    - the device number for plugins like 'hw'\n"
 "  SUBDEV - the subdevice number for plugins like 'hw'\n"
 msgstr ""
+"Controlador PCM de Arquitectura de Sonido Linux Avanzada (ALSA)\n"
+"usando ALSA %s.\n"
+"La especificación del dispositivo sigue las convenciones de nombres\n"
+"de ALSA como se detalla en la descripción que está disponible en la\n"
+"página web del proyecto:\n"
+"    http://alsa-project.org/alsa-doc/alsa-lib/midi.html\n"
+"Varios complementos para ALSA pueden ser usados, 'hw' permite\n"
+"direccionamiento directo de los canales hardware por tarjeta, dispositivo\n"
+"y subdispositivo.\n"
+"  COMPLEMENTO - el complemento ALSA por defecto es generalmente bueno\n"
+"  TARJETA - el número de tarjeta para los complementos como 'hw'\n"
+"  DISPOSITIVO - el número de dispositivo para los complementos como 'hw'\n"
+"  SUBDISPOSITIVO - el número de subdispositivo para los complementos como 'hw'\n"
 
 #: plugins/artscompressor.idl:28 plugins/evaluator/bseevaluator.idl:27
 msgid "GNU General Public License"
@@ -5496,6 +5521,22 @@ msgid ""
 "example, an output amplification of 5 dB would be okay, if the input signal "
 "never exceeded 0 dB."
 msgstr ""
+"ArtsCompressor comprime el sonido.\n"
+"\n"
+"La compresión es una operación dinámica consistente en dos partes:\n"
+"(1) el valor actual del volumen de la señal de entrada es detectado\n"
+"(2) si excede de cierto umbral, el volumen de la señal de salida será reducido\n"
+"\n"
+"La detección del volumen de entrada tiene un tiempo de vida medio de ataque y salida que puede ser especificado - en milisegundos . con sus correspondientes propiedades. Esta envoltura hace que el compresor se adapte lentamente al nivel de la señal de entrada actual.n"
+"\n"
+"La relación especifica cómo se ha de reducir el volumen de una señal, si excede del umbral. Una relación de compresión de 2:1 significa que si la entrada es de 2dB sobre el umbral, el volumen de salida será de 1 dB por encima del umbral. Ejemplo (umbral = -10, relación 2:1):\n"
+"entrada = -20 dB => salida = -20 dB\n"
+"entrada = -10 dB => salida = -10 dB\n"
+"entrada = 0 dB => salida = -5 dB\n"
+"entrada = 10 dB => salida = 0 dB\n"
+"entrada = 20 dB => salida = 5 dB\n"
+"\n"
+"La compresión se suele pensar como una operación para hacer que la música «suene más alta». Para conseguir esto, el primer paso es reducir el rango dinámico como en el ejemplo anterior. Como se ha reducido el volumen de las partes más ruidosas de la música más ruidosas, podemos amplificar todo, sin riego de distorisión o truncamientos. Esto tiene un efecto general que hace que la música suene más alta. En nuestro ejemplo, una amplificación de 5 dB estaría bien, si la señal de salida nunca excede de 0 dB."
 
 #: plugins/artscompressor.idl:50
 msgid "Audio input 1"
@@ -5820,8 +5861,9 @@ msgid "Ctrl Out"
 msgstr "Salida de control"
 
 #: plugins/bsesimpleadsr.c:122
+#, fuzzy
 msgid "Attack-Decay-Sustain-Release envelope output"
-msgstr ""
+msgstr "Ataque-Decaimiento-Sostenido-máxima salida"
 
 #: plugins/bsesimpleadsr.c:124
 msgid "Done Out"
@@ -5840,7 +5882,7 @@ msgid ""
 "DavBassFilter is a low-pass resonant TB-303 style filter based on the VCF303 "
 "portions of gsyn v0.2. The filter algorithm is partly based on the one "
 "described in \"Musical Applications of Microprocessors\" by Hal Chamberlin."
-msgstr ""
+msgstr "El filtro DavBass es un filtro paso bajo resonante estilo TB-303 basado en las partes de VCF202 del gsyn v0.2. El algoritmo dl filtro está parcialmente basado en el que está descrito en «Aplicaciones musicales de los microprocesadores» de Hal Chamberlin."
 
 #: plugins/davbassfilter.idl:34 plugins/davchorus.idl:31
 #: plugins/evaluator/bseevaluator.idl:32
