--- a/docs/site-links-synthesis.texi
+++ b/docs/site-links-synthesis.texi
@@ -101,7 +101,7 @@ Selected @uref{http://www.soundonsound.com,,Sound On Sound} Articles:
 	@uref{http://www.soundonsound.com/sos/jan04/articles/synthsecrets.htm,,Part57}
 	@uref{http://www.soundonsound.com/sos/feb04/articles/synthsecrets.htm,,Part58}
 	@uref{http://www.soundonsound.com/sos/mar04/articles/synthsecrets.htm,,Part59}
-	@c @uref{http://www.soundonsound.com/sos/apr04/articles/synthsecrets.htm,,Part60}
+	@uref{http://www.soundonsound.com/sos/apr04/articles/synthsecrets.htm,,Part60}
 	@c @uref{http://www.soundonsound.com/sos/may04/articles/synthsecrets.htm,,Part61}
 	@c @uref{http://www.soundonsound.com/sos/jun04/articles/synthsecrets.htm,,Part62}
 	@c @uref{http://www.soundonsound.com/sos/jul04/articles/synthsecrets.htm,,Part63}
