--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Nov 18 14:05:26 2004  Tim Janik  <timj@gtk.org>
+
+	* configure.in: released beast 0.6.3, binary 0, interface 0.
+
 Wed Nov 17 01:20:56 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstbuseditor.c:
