--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Nov 18 18:07:21 2004  Tim Janik  <timj@gtk.org>
+
+	* docs/site-about.texi: update on new features.
+
 Thu Nov 18 14:05:26 2004  Tim Janik  <timj@gtk.org>
 
 	* configure.in: released beast 0.6.3, binary 0, interface 0.
